added a tabbed content to the script

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                 </div>
             </div>
             <div class="right">
-                <div class="top bg-white pt-24 pl-20 pr-16 pb-10 relative">
+                <div class="testimonial__content testimonial__content--1 testimonial-active hidden top bg-white pt-24 pl-20 pr-16 pb-10 relative">
                     <img class="absolute right-28 top-[-10px]" src="images/Quote.svg" alt="">
                     <h4 class="max-w-lg font-semibold text-2xl mb-6">Finsweet has been a wonderful partner to work with. I have been a customer now for the past few months now and I have had nothing but positive experiences!</h4>
                     <div class="rght-btm flex justify-between ">
@@ -355,10 +355,53 @@
                         <img src="images/Logo-ipsum.svg" alt="">
                     </div>
                 </div>
+                <div class="testimonial__content hidden  testimonial__content--2 top bg-white pt-24 pl-20 pr-16 pb-10 mb-3 relative">
+                    <img class="absolute right-28 top-[-10px]" src="images/Quote.svg" alt="">
+                    <h4 class="max-w-lg font-semibold text-2xl mb-6">Working with Finsweet has been a good experience so far which i enjoyed. i also intend to continue working with them to better business relationship</h4>
+                    <div class="rght-btm flex justify-between ">
+                        <div class="person-1 flex">
+                            <img class="mr-4" src="images/person 2.svg" alt="">
+                            <div class="person-2-cont">
+                                <h5 class="text-primary-col font-semibold text-base ">Johnny Andro</h5>
+                                <p class="text-gray-500">producer, Company</p>
+                            </div>
+                        </div>
+                        <img src="images/Logo-ipsum.svg" alt="">
+                    </div>
+                </div>
+                <div class="testimonial__content hidden testimonial__content--3   top bg-white pt-24 pl-20 pr-16 pb-10 relative">
+                    <img class="absolute right-28 top-[-10px]" src="images/Quote.svg" alt="">
+                    <h4 class="max-w-lg font-semibold text-2xl mb-6">Finsweet has been a wonderful partner to work with. I have been a customer now for the past few months now and I have had nothing but positive experiences!</h4>
+                    <div class="rght-btm flex justify-between ">
+                        <div class="person-3 flex">
+                            <img class="mr-4" src="images/person 3.svg" alt="">
+                            <div class="person-1-cont">
+                                <h5 class="text-primary-col font-semibold text-base ">Johnny Andro</h5>
+                                <p class="text-gray-500">marketer, Company</p>
+                            </div>
+                        </div>
+                        <img src="images/Logo-ipsum.svg" alt="">
+                    </div>
+                </div>
+                <div class="testimonial__content hidden testimonial__content--4   top bg-white pt-24 pl-20 pr-16 pb-10 relative">
+                    <img class="absolute right-28 top-[-10px]" src="images/Quote.svg" alt="">
+                    <h4 class="max-w-lg font-semibold text-2xl mb-6">Finsweet has been a wonderful partner to work with. I have been a customer now for the past few months now and I have had nothing but positive experiences!</h4>
+                    <div class="rght-btm flex justify-between ">
+                        <div class="person-3 flex">
+                            <img class="mr-4" src="images/person 2.svg" alt="">
+                            <div class="person-1-cont">
+                                <h5 class="text-primary-col font-semibold text-base ">Johnny Andro</h5>
+                                <p class="text-gray-500">marketer, Company</p>
+                            </div>
+                        </div>
+                        <img src="images/Logo-ipsum.svg" alt="">
+                    </div>
+                </div>
                 <div class="slider flex justify-center mt-6">
-                    <div class="circle h-3 w-3 cursor-pointer mr-2 rounded-[50%] bg-primary-col"></div>
-                    <div class="circle h-3 w-3 cursor-pointer mr-2 rounded-[50%] bg-gray-300"></div>
-                    <div class="circle h-3 w-3 cursor-pointer mr-2 rounded-[50%] bg-gray-300"></div>
+                    <div class=" active circle h-3 w-3  cursor-pointer mr-2 rounded-[50%] bg-gray-300" data-btn= '1'></div>
+                    <div class=" circle h-3 w-3  cursor-pointer mr-2 rounded-[50%] bg-gray-300" data-btn= '2'></div>
+                    <div class="circle h-3 w-3 cursor-pointer mr-2 rounded-[50%] bg-gray-300" data-btn= '3'></div>
+                    <div class="circle h-3 w-3 cursor-pointer mr-2 rounded-[50%] bg-gray-300" data-btn= '4'></div>
                 </div>
             </div>
         </div>
